[project]
name = "dspy-lancedb-memory"
version = "0.1.4"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Edward Boswell", email = "thememium@gmail.com" }]
requires-python = ">=3.12"
keywords = ["dspy", "ai", "memory", "lancedb"]
classifiers = [
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "dspy>=3.2.0",
  "httpx>=0.28.1",
  "lancedb<=0.25.3",
  "litellm>=1.82.6",
  "pyarrow>=24.0.0",
  "pydantic>=2.13.3",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/thememium/dspy-lancedb-memory"
Documentation = "https://github.com/thememium/dspy-lancedb-memory"
Repository = "https://github.com/thememium/dspy-lancedb-memory.git"
Issues = "https://github.com/thememium/dspy-lancedb-memory/issues"
Changelog = "https://github.com/thememium/dspy-lancedb-memory/blob/master/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "deptry>=0.25.1",
  "isort>=8.0.1",
  "poethepoet>=0.45.0",
  "pytest>=9.0.3",
  "ruff>=0.15.12",
  "ty>=0.0.34",
  "usechange>=0.1.35",
]

[tool.pytest.ini_options]
filterwarnings = ["ignore:.*prefix.*:DeprecationWarning:dspy.*"]

[tool.deptry]
known_first_party = ["dspy_lancedb_memory"]

[tool.poe.tasks]
dev = "uv run example.py"
clean-full = "sh -c 'uv run isort . && uv run ruff check . --fix && uv run ruff format . && uv run deptry . && uv run ty check'"
clean = "sh -c 'uv run isort . && uv run ruff format .'"
test = "uv run pytest tests/ -v"
sort = "uv run isort ."
lint = "uv run ruff check ."
format = "uv run ruff format ."
deptry = "uv deptry ."
typecheck = "uv run ty check"
release = "uv run usechange release"
